--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
   <!-- style sheet link -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- when css is not working when you use bootstrap, then make sure your CSS stylesheet is linked after your link to Bootstrap - again, it's a matter of who wins -->
 
   <!-- fontawesome icon link -->
